--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">메이플 시뮬레이터</string>
-    <string name="stat_info_lists">스탯 공격력 \n
+    <string name="stat_info_lists">
+        스탯 공격력\n
         HP \n
         MP \n
         STR \n
