--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
     <string name="stat_info_lists">
         스탯 공격력\n
         HP\n
-        MP\n
         STR\n
         DEX\n
         INT\n
         LUK\n
+        공격력\n
         데미지\n
         보스 데미지\n
         최종 데미지\n
